# egui-theme-switcher

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
examples/showcase/: CHANGELOG.md  Cargo.toml  README.md
examples/showcase/src/: main.rs
src/: lib.rs
