[package]
name = "egui-theme-switcher"
version = "0.1.8"
edition = "2024"
authors = ["Flavio Bizzarri <fl.bizzarri@gmail.com>"]
license = "MIT"
description = "egui widget for switching theme"
repository = "https://github.com/newfla/egui-theme-switcher"
keywords = ["egui", "theming", "widget"]
categories = ["gui"]

[workspace]
resolver = "2"
members = [
    "examples/*"
]

[dependencies]
egui = "0.32.0"
egui_material_icons = "0.4.0"

[workspace.dependencies]
eframe = "0.32.3"
